fixed gallery preview on mobile

--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -64,19 +64,20 @@ ul.links {
 
 .gallery {
   margin: 0 auto;
-  width: 80%;
+  max-width: 55rem;
 
   .preview {
     img {
-      height: 400px;
+      height: auto;
       margin: 0 auto;
       width: auto;
+      max-width: 100%;
     }
   }
 
   .thumbList {
     height: 100px;
-    margin: 1rem -1rem 0 0;
+    margin-top: 1rem;
     overflow: hidden;
 
     .thumbListItems {
@@ -98,8 +99,11 @@ ul.links {
       img {
         display: inline-block;
         height: 100px;
-        margin-left: 1rem;
         width: auto;
+      }
+
+      img + img {
+        margin-left: 1rem;
       }
     }
   }
